addNewGoodVegetableTypeTest done